Update layout and Data, change footer image

--- a/Connect.html
+++ b/Connect.html
@@ -45,7 +45,6 @@
 
 
 </head>
-
 <body>
     <button onclick="topFunction()" id="btn-back-to-top" title="Go to top"> <i class="fas fa-arrow-up"></i></button>
     <main class="main" id="top">
@@ -180,12 +179,12 @@
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0 text-black ps-sm-4">
-                        <p class="text-uppercase mb-1 fw-bold">Nền tảng được phát triển dưới sự hợp tác của DVET và IOM
+                        <p class="text-uppercase mb-1 fw-bold">NỀN TẢNG ĐƯỢC PHÁT TRIỂN DƯỚI SỰ HỢP TÁC CỦA TỔNG CỤC GIÁO DỤC NGHỀ NGHIỆP VÀ TỔ CHỨC DI CƯ QUỐC TẾ
                         </p>
                         <div class="d-flex">
                             <img alt="" src="assets/img/Footer/line1.png" class="custom-image" />
                         </div>
-                        <p class="mb-1">Và được đóng góp bởi</p>
+                        <p class="mt-2 mb-1">Và được đóng góp bởi</p>
                         <div class="d-flex">
                             <img alt="" src="assets/img/Footer/line2.png" class="custom-image" />
                         </div>
