--- a/Partner.html
+++ b/Partner.html
@@ -72,7 +72,7 @@
         </nav>
 
         <div class="hearder-banner">
-            <img src="./assets/img/Banner/DoiTacDaoTao2.png" class=" pt-5 w-100" alt="">
+            <img src="./assets/img/Banner/DoiTacDaoTao3.png" class=" pt-5 w-100" alt="">
             <div class="header-banner-text" style="top: 80%;">
                 <h1 class="fw-bold">Đối tác đào tạo</h1>
                 <p class="pt-3">Mở rộng kiến thức, nâng cao kỹ năng bằng cách tham gia các khóa học nghề tại các cơ sở
@@ -80,7 +80,7 @@
             </div>
         </div>
         <!-- Partners -->
-        <div class="container pt-4">
+        <div class="container pt-4 " id="wrapper">
             <div class="banner-partner row mb-5">
                 <div class="col-md-4 col-sm-12 partner-logo">
                     <img src="./assets/img/DoiTacDaoTao/CaoDangCongNgheCaoDongNai.png" class="" alt="">
@@ -273,6 +273,12 @@
                 </div>
             </div>
         </div>
+        <div class="d-flex justify-content-center align-items-center pb-2">
+            <button id="button" class="d-flex align-items-center ">
+                <span class="fw-bold">Xem thêm</span> 
+                <img src="./assets/img/favicons/icons8-down-16.png" alt="" class="ml-2">
+            </button>
+        </div>
         <!----------------------Footer-------------------------->
         <footer class="footer bg-200 py-6 border-top">
             <div class="container">
@@ -338,12 +344,13 @@
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0 text-black ps-sm-4">
-                        <p class="text-uppercase mb-1 fw-bold">Nền tảng được phát triển dưới sự hợp tác của DVET và IOM
+                        <p class="text-uppercase mb-1 fw-bold">NỀN TẢNG ĐƯỢC PHÁT TRIỂN DƯỚI SỰ HỢP TÁC CỦA TỔNG CỤC
+                            GIÁO DỤC NGHỀ NGHIỆP VÀ TỔ CHỨC DI CƯ QUỐC TẾ
                         </p>
                         <div class="d-flex">
                             <img alt="" src="assets/img/Footer/line1.png" class="custom-image" />
                         </div>
-                        <p class="mb-1">Và được đóng góp bởi</p>
+                        <p class="mt-2 mb-1">Và được đóng góp bởi</p>
                         <div class="d-flex">
                             <img alt="" src="assets/img/Footer/line2.png" class="custom-image" />
                         </div>
@@ -362,6 +369,7 @@
     <script src="assets/js/home-modal.js"></script>
     <!-- back to top Button  -->
     <script src="assets/js/toTop-btn.js"></script>
+    <script src="assets/js/expand-button.js"></script>
 </body>
 
 </html>
