--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="custom-card card-size-large d-flex flex-column justify-content-between">
                     <div>
-                        <img alt="" src="assets/img/HinhDaiDienKhoaHoc/KyNangSo/TruyCapThongTinTrucTuyen.jpg"
+                        <img alt="" src="assets/img/HinhDaiDienKhoaHoc/KyNangSo/TruyCapThongTinTrucTuyen.png"
                             class="categories-image_active" style="width:100% !important; ">
                         <div class="mt-4 mr-1">
                             <h5 class="fw-bold title-height">Truy cập thông tin trực tuyến </h5>
@@ -488,7 +488,7 @@
                                 <span class="ml-2">Kỹ năng lắng nghe trong giao tiếp</span>
                             </div>
                             <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
+                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 22px; padding-bottom: 20px;">
                                 <span class="ml-2">Ngôn từ - Giọng nói - Ngôn ngữ cơ thể trong giao tiép</span>
                             </div>
                         </div>
@@ -547,12 +547,12 @@
                 <!-- Add new course between here -->
             </div>
         </div>
-        <!----------------------Chuơng trình kỹ năng xin viẹc - khởi nghiệp-------------------------->
+        <!----------------------Chuơng trình kỹ năng xin việc-------------------------->
         <section class="pb-4 pt-4 bg-parallax">
             <div class="container">
                 <div class="row d-flex justify-content-center">
                     <div class="col-12 custom-header-title text-center">
-                        <h4 class="fw-bold text-center heading-text"> Kỹ năng xin việc
+                        <h4 class="fw-bold text-center heading-text"> Kỹ năng xin việc làm
                         </h4>
                         <p>Bạn đang băn khoăn chưa biết
                             phải chuẩn bị gì, tìm việc ra làm sao và làm thế nào để
@@ -564,7 +564,7 @@
                 </div>
             </div>
         </section>
-        <div class="container mt-3">
+        <div class="container mt-3 mb-2">
             <div class="owl-carousel owl-theme owl-carousel-theme2">
                 <!-- Add new course between here -->
                 <div class="custom-card card-size-normal d-flex flex-column justify-content-between">
@@ -581,7 +581,7 @@
                                     Anh</span>
                             </div>
                             <div class="d-flex mt-1">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
+                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 25px; padding-bottom: 20px;">
                                 <span class="ml-2">Định vị bản thân để biết sở thích và khả năng của mình là gì.</span>
                             </div>
                         </div>
@@ -682,7 +682,8 @@
             <!-- Add new course between here -->
             <div class="d-flex justify-content-center">
                 <div class="owl-carousel owl-theme owl-carousel-theme3">
-                    <div class="custom-card d-flex flex-column justify-content-between" style="min-height: 623.6px; float: right;">
+                    <div class="custom-card d-flex flex-column justify-content-between"
+                        style="min-height: 623.6px; float: right;">
                         <div>
                             <img alt=""
                                 src="assets/img/HinhDaiDienKhoaHoc/KyNangXinViec-KhoiNghiep/KyNangKhoiNghiep.jpeg"
@@ -783,9 +784,9 @@
                             <img alt="" src="assets/img/icons/uu-diem-3.svg" class="custom-icon">
                         </div>
                         <span class="fw-bold my-2">Học mọi lúc mọi nơi</span>
-                        <span>Người học có thể truy cập các khóa học và học tập miễn phí trên giao diện máy tính và điện
-                            thoại di động (Android và iOS). Người học tự chủ động sắp xếp thời gian học và hoàn thành
-                            khóa học</span>
+                        <span>Người học có thể truy cập các khóa học miễn phí trên giao diện máy tính và điện thoại di
+                            động (Android
+                            và iOS). Người học tự chủ động sắp xếp thời gian học và hoàn thành khóa học</span>
                     </div>
                 </div>
             </div>
@@ -943,15 +944,18 @@
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0 text-black ps-sm-4">
-                        <p class="text-uppercase mb-1 fw-bold">Nền tảng được phát triển dưới sự hợp tác của DVET và IOM
+                        <p class="text-uppercase mb-1 fw-bold">NỀN TẢNG ĐƯỢC PHÁT TRIỂN DƯỚI SỰ HỢP TÁC CỦA TỔNG CỤC
+                            GIÁO DỤC NGHỀ NGHIỆP VÀ TỔ CHỨC DI CƯ QUỐC TẾ
                         </p>
                         <div class="d-flex">
                             <img alt="" src="assets/img/Footer/line1.png" class="custom-image" />
                         </div>
-                        <p class="mb-1">Và được đóng góp bởi</p>
+                        <p class="mt-2 mb-1">Và được đóng góp bởi</p>
                         <div class="d-flex">
                             <img alt="" src="assets/img/Footer/line2.png" class="custom-image" />
                         </div>
+                        <!-- <p class="mb-1" style="font-style:italic; color:#909090;">Đối tác triển khai và vận hành nền
+                            tảng: Flexidata.vn</p> -->
                     </div>
                 </div>
             </div>
