--- a/Jobs.html
+++ b/Jobs.html
@@ -108,9 +108,9 @@
                 <div class="col-md-8 col-sm-12 partner-content">
                     <div>
                         <h4 class="fw-bold">Trung tâm Dịch vụ việc làm Nghệ An</h4>
-                        <p>"Trụ sở: Số 201,Đ.Phong Định Cảng, P.Trường Thi, TP Vinh, Nghệ An
+                        <p>Trụ sở: Số 201,Đ.Phong Định Cảng, P.Trường Thi, TP Vinh, Nghệ An
                             <br> Email: sanvieclamnghean@gmail.com
-                            <br> Điện thoại: 02383 550 050"
+                            <br> Điện thoại: 02383 550 050
                         </p>
                         <a class=" fw-bold" href="https://vieclamnghean.vn/" target="_blank">Thông tin chi tiết
                             <i class="fas fa-chevron-right ml-2"></i>
@@ -286,12 +286,12 @@
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0 text-black ps-sm-4">
-                        <p class="text-uppercase mb-1 fw-bold">Nền tảng được phát triển dưới sự hợp tác của DVET và IOM
+                        <p class="text-uppercase mb-1 fw-bold">NỀN TẢNG ĐƯỢC PHÁT TRIỂN DƯỚI SỰ HỢP TÁC CỦA TỔNG CỤC GIÁO DỤC NGHỀ NGHIỆP VÀ TỔ CHỨC DI CƯ QUỐC TẾ
                         </p>
                         <div class="d-flex">
                             <img alt="" src="assets/img/Footer/line1.png" class="custom-image" />
                         </div>
-                        <p class="mb-1">Và được đóng góp bởi</p>
+                        <p class="mt-2 mb-1">Và được đóng góp bởi</p>
                         <div class="d-flex">
                             <img alt="" src="assets/img/Footer/line2.png" class="custom-image" />
                         </div>
@@ -310,6 +310,7 @@
     <script src="assets/js/home-modal.js"></script>
     <!-- back to top Button  -->
     <script src="assets/js/toTop-btn.js"></script>
+    <!-- <script src="assets/js/expand-button.js"></script> -->
 </body>
 
 </html>
