--- a/Jobs.html
+++ b/Jobs.html
@@ -80,7 +80,7 @@
             </div>
         </div>
         <!-- Content -->
-        <div class="container pt-4">
+        <div class="container pt-4" id="wrapper">
             <div class="banner-partner row mb-5">
                 <div class="col-md-4 col-sm-12 partner-logo">
                     <img src="./assets/img/KetNoiViecLam/SoLaoDongThuongBinhVaXaHoiQuangBinh.png" alt="">
@@ -221,6 +221,12 @@
                 </div>
             </div>
         </div>
+        <div class="d-flex justify-content-center align-items-center pb-2">
+            <button id="button" class="d-flex align-items-center ">
+                <span class="fw-bold">Xem thêm</span> 
+                <img src="./assets/img/favicons/icons8-down-16.png" alt="" class="ml-2">
+            </button>
+        </div>
         <!----------------------Footer-------------------------->
         <footer class="footer bg-200 py-6 border-top">
             <div class="container">
@@ -310,7 +316,8 @@
     <script src="assets/js/home-modal.js"></script>
     <!-- back to top Button  -->
     <script src="assets/js/toTop-btn.js"></script>
-    <!-- <script src="assets/js/expand-button.js"></script> -->
+    <script src="assets/js/expand-button.js"></script>
+
 </body>
 
 </html>
