--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         </div>
                     </div>
                     <a class="mt-4 fw-bold d-flex align-items-center"
-                        href="https://hoc.congdanso.edu.vn/#/course/78/item/837" target="_blank" rel="nofollow">
+                        href="https://hoc.congdanso.edu.vn/#/course/77/item/815" target="_blank" rel="nofollow">
                         Vào khoá học <i class="fas fa-chevron-right ml-2"></i>
                     </a>
                 </div>
@@ -457,7 +457,8 @@
                                 <span class="ml-2">Kỹ năng lắng nghe trong giao tiếp</span>
                             </div>
                             <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 22px; padding-bottom: 20px;">
+                                <img alt="" src="assets/img/icons/control-check.svg"
+                                    style="width: 22px; padding-bottom: 20px;">
                                 <span class="ml-2">Ngôn từ - Giọng nói - Ngôn ngữ cơ thể trong giao tiép</span>
                             </div>
                         </div>
@@ -493,9 +494,8 @@
                             </div>
                         </div>
                     </div>
-                    <a class="mt-4 fw-bold d-flex align-items-center"
-                        href="" target="_blank" rel="nofollow">
-                        Vào khoá học <i class="fas fa-chevron-right ml-2"></i>
+                    <a class="mt-4 fw-bold d-flex align-items-center" href="" target="_blank" rel="nofollow">
+                        Sắp ra mắt<i class="fas fa-chevron-right ml-2"></i>
                     </a>
                 </div>
                 <div class="custom-card card-size-normal d-flex flex-column justify-content-between">
@@ -528,9 +528,8 @@
                             </div>
                         </div>
                     </div>
-                    <a class="mt-4 fw-bold d-flex align-items-center"
-                        href="" target="_blank" rel="nofollow">
-                        Vào khoá học <i class="fas fa-chevron-right ml-2"></i>
+                    <a class="mt-4 fw-bold d-flex align-items-center" href="" target="_blank" rel="nofollow">
+                       Sắp ra mắt<i class="fas fa-chevron-right ml-2"></i>
                     </a>
                 </div>
                 <!-- Add new course between here -->
@@ -614,7 +613,8 @@
                                 <span class="ml-2">Hồ sơ xin việc</span>
                             </div>
                             <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 25px; padding-bottom: 20px;">
+                                <img alt="" src="assets/img/icons/control-check.svg"
+                                    style="width: 25px; padding-bottom: 20px;">
                                 <span class="ml-2">Chinh phục nhà tuyển dụng và cách trả lời phỏng vấn</span>
                             </div>
                         </div>
@@ -680,7 +680,8 @@
                 <!-- Add new course between here -->
                 <div class="custom-card card-size-normal d-flex flex-column justify-content-between">
                     <div>
-                        <img alt="" src="assets/img/HinhDaiDienKhoaHoc/KyNangXinViec-KhoiNghiep/KyNangKhoiNghiep/Khoi dong  Tong quan khoi nghiep.png"
+                        <img alt=""
+                            src="assets/img/HinhDaiDienKhoaHoc/KyNangXinViec-KhoiNghiep/KyNangKhoiNghiep/Khoi dong  Tong quan khoi nghiep.png"
                             class="categories-image_active" style="width:100% !important">
                         <div class="mt-4 mr-1">
                             <h5 class="fw-bold title-height">Khởi động: Tổng quan về khởi nghiệp</h5>
@@ -707,7 +708,8 @@
                 </div>
                 <div class="custom-card card-size-normal d-flex flex-column justify-content-between">
                     <div>
-                        <img alt="" src="assets/img/HinhDaiDienKhoaHoc/KyNangXinViec-KhoiNghiep/KyNangKhoiNghiep/vuot chuong ngai vat - quan ly tai chinh.png"
+                        <img alt=""
+                            src="assets/img/HinhDaiDienKhoaHoc/KyNangXinViec-KhoiNghiep/KyNangKhoiNghiep/vuot chuong ngai vat - quan ly tai chinh.png"
                             class="categories-image_active" style="width:100% !important">
                         <div class="mt-4 mr-1">
                             <h5 class="fw-bold title-height">Vượt chướng ngại vật: Quản lý tài chính</h5>
@@ -726,19 +728,20 @@
                                 <span class="ml-2">Huy động vốn</span>
                             </div>
                             <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 22px; padding-bottom: 20px;">
+                                <img alt="" src="assets/img/icons/control-check.svg"
+                                    style="width: 22px; padding-bottom: 20px;">
                                 <span class="ml-2">Quản lý dòng tiền</span>
                             </div>
                         </div>
                     </div>
-                    <a class="mt-4 fw-bold d-flex align-items-center"
-                        href="" target="_blank" rel="nofollow">
-                        Vào khoá học <i class="fas fa-chevron-right ml-2"></i>
+                    <a class="mt-4 fw-bold d-flex align-items-center" href="" target="_blank" rel="nofollow">
+                        Sắp ra mắt<i class="fas fa-chevron-right ml-2"></i>
                     </a>
                 </div>
                 <div class="custom-card card-size-normal d-flex flex-column justify-content-between">
                     <div>
-                        <img alt="" src="assets/img/HinhDaiDienKhoaHoc/KyNangXinViec-KhoiNghiep/KyNangKhoiNghiep/Tang toc ky nang ban hang.png"
+                        <img alt=""
+                            src="assets/img/HinhDaiDienKhoaHoc/KyNangXinViec-KhoiNghiep/KyNangKhoiNghiep/Tang toc ky nang ban hang.png"
                             class="categories-image_active" style="width:100% !important">
                         <div class="mt-4 mr-1">
                             <h5 class="fw-bold title-height">Tăng tốc: Kỹ năng bán hàng</h5>
@@ -766,14 +769,14 @@
                             </div>
                         </div>
                     </div>
-                    <a class="mt-4 fw-bold d-flex align-items-center"
-                        href="" target="_blank" rel="nofollow">
-                        Vào khoá học<i class="fas fa-chevron-right ml-2"></i>
+                    <a class="mt-4 fw-bold d-flex align-items-center" href="" target="_blank" rel="nofollow">
+                        Sắp ra mắt<i class="fas fa-chevron-right ml-2"></i>
                     </a>
                 </div>
                 <div class="custom-card card-size-normal d-flex flex-column justify-content-between">
                     <div>
-                        <img alt="" src="assets/img/HinhDaiDienKhoaHoc/KyNangXinViec-KhoiNghiep/KyNangKhoiNghiep/Ve dich Thong tin chung cho nguoi khoi nghiep.png"
+                        <img alt=""
+                            src="assets/img/HinhDaiDienKhoaHoc/KyNangXinViec-KhoiNghiep/KyNangKhoiNghiep/Ve dich Thong tin chung cho nguoi khoi nghiep.png"
                             class="categories-image_active" style="width:100% !important">
                         <div class="mt-4 mr-1">
                             <h5 class="fw-bold title-height">Về đích: Thông tin chung cho người khởi nghiệp</h5>
@@ -801,20 +804,21 @@
                             </div>
                         </div>
                     </div>
-                    <a class="mt-4 fw-bold d-flex align-items-center"
-                        href="" target="_blank" rel="nofollow">
-                        Vào khoá học <i class="fas fa-chevron-right ml-2"></i>
+                    <a class="mt-4 fw-bold d-flex align-items-center" href="" target="_blank" rel="nofollow">
+                       Sắp ra mắt<i class="fas fa-chevron-right ml-2"></i>
                     </a>
                 </div>
                 <div class="custom-card card-size-normal d-flex flex-column justify-content-between">
                     <div>
-                        <img alt="" src="assets/img/HinhDaiDienKhoaHoc/KyNangXinViec-KhoiNghiep/KyNangKhoiNghiep/ban Hang truc Tuyen.png"
+                        <img alt=""
+                            src="assets/img/HinhDaiDienKhoaHoc/KyNangXinViec-KhoiNghiep/KyNangKhoiNghiep/ban Hang truc Tuyen.png"
                             class="categories-image_active" style="width:100% !important">
                         <div class="mt-4 mr-1">
                             <h5 class="fw-bold title-height">Bán hàng trực tuyến</h5>
                             <div class="d-flex mt-3 mb-2 align-items-center">
                                 <img alt="" src="assets/img/icons/ChungNhan.png" style="width: 20px">
-                                <span class="ml-2 fw-bold">Khóa học được xây dựng bởi Quỹ Châu Á dưới sự hỗ trợ của Google.org</span>
+                                <span class="ml-2 fw-bold">Khóa học được xây dựng bởi Quỹ Châu Á dưới sự hỗ trợ của
+                                    Google.org</span>
                             </div>
                             <div class="d-flex mt-1">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
@@ -834,8 +838,7 @@
                             </div>
                         </div>
                     </div>
-                    <a class="mt-4 fw-bold d-flex align-items-center"
-                        href="" target="_blank" rel="nofollow">
+                    <a class="mt-4 fw-bold d-flex align-items-center" href="" target="_blank" rel="nofollow">
                         Vào khoá học<i class="fas fa-chevron-right ml-2"></i>
                     </a>
                 </div>
@@ -997,9 +1000,8 @@
                             </a>
                         </div>
                         <div class="mt-3">
-                            <a href="assets/file/to_roi_gioi_thieu_ve_nen_tang.pdf"
-                                class="text-decoration-none text-black" download="to_roi_gioi_thieu_ve_nen_tang.pdf"
-                                target="_blank">
+                            <a href="https://flexidatavn.sharepoint.com/sites/public-resources/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2Fpublic%2Dresources%2FShared%20Documents%2FIOM%20public%20resource%2FGo%20Digital%20ASEAN%20%2D%20t%C3%A0i%20li%E1%BB%87u%20cho%20gi%C3%A1o%20vi%C3%AAn&p=true&ga=1"
+                                class="text-decoration-none text-black" target="_blank">
                                 Mạng Internet và ứng dụng cơ bản, An toàn sử dụng
                                 Internet, Bán hàng trực tuyến - tài liệu cho người hướng
                                 dẫn
